k8s/istio/istio-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio.io/dataplane-mode: ambient
